--- a/Template-oop.vcxproj
+++ b/Template-oop.vcxproj
@@ -147,10 +147,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Arbore.cpp" />
     <ClCompile Include="Set.cpp" />
     <ClCompile Include="Template-oop.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Arbore.h" />
     <ClInclude Include="Set.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
