--- a/Template-oop.vcxproj.filters
+++ b/Template-oop.vcxproj.filters
@@ -18,12 +18,18 @@
     <ClCompile Include="Template-oop.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Arbore.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="Set.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Set.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Arbore.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
